# n_g_m_utils_idVerify

./: .gitignore
app/: app.config.ts  app.vue  constants.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
app/components/Verification/: CaptureContainer.vue  CaptureContainerCombined.vue
app/config/: defs.ts
app/config/menus/: sideNavConfig-[authenticated].ts
app/layouts/: authenticated.vue  tempAuthenticated.vue  unauthenticated.vue
app/middleware/: auth.global.ts
app/pages/: index.vue
app/pages/notify/: logs.vue  whatsappChat.vue
app/pages/verify/: [id].vue
app/pages/verify1/: [id].vue
app/server/api/auth/: webhook.post.ts
app/server/api/config/: health.get.ts
app/server/api/config/storage/: status.get.ts
server/: pyproject.toml  requirements.txt  version.cnf
server/app/: main.py
server/app/utils/: vision.py
