[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "mediapipe>=0.10.0",
    "motor>=3.3.0",
    "numpy<2.0.0",
    "opencv-python-headless>=4.8.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.23.0",
]
